--- a/스터디_2023/프로젝트/이마트24/css/_footer.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_footer.scss
@@ -148,11 +148,14 @@ footer{
 }
 
 @include mobile {
-    footer{
-        .footer_top{
-            .footer_link{
-                flex-direction: column;
-            }
-        }
-    }
+    footer{padding: 50px 0;}
+    footer .footer_top{flex-direction: column;gap: 10px;}
+    footer .footer_top .footer_link{flex-direction: column;gap: 10px;}
+    footer .footer_top .footer_link li a{padding: 0;}
+    footer .footer_top .footer_link li:after{display: none;}
+    
+       
+}
+@include mobile640 {
+    footer .footer_bottom{flex-direction: column-reverse;gap:20px;}
 }
