--- a/스터디_2023/프로젝트/이마트24/css/_header.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_header.scss
@@ -149,6 +149,42 @@ h1{font-size: 0;line-height: 0;}
             
         }
     }
+    .lnb_link{
+        display: none;
+        padding: 0 14px;
+        ul{
+            display:flex;
+            flex-direction: column;
+            margin-top:23px;
+            li{
+                margin-bottom:16px;
+                
+                border:1px solid #ebebeb;
+                border-radius: 16px;
+                box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+                a{  
+                    display: block;
+                    position: relative;
+                    padding:16px 32px;
+                    font-size:15px;
+                    line-height:20px;
+                    filter:grayscale(1);
+                    &:after{
+                        display: block;
+                        position: absolute;
+                        top:calc(50% - 5px);
+                        right:40px;
+                        @include sprite_img(7px, 9px, '../images/main_sprite.png', -4px -22px);
+                        
+                    }
+                }
+                &:last-child{
+                    margin-bottom: 0;
+                }
+            }
+        }
+        
+    }
     }
     
 .lnb_open{
@@ -170,24 +206,59 @@ h1{font-size: 0;line-height: 0;}
         display: none;
     }
     .lnb{
+        .lnb_topbox{
+            display: none;
+        }
+        
         .menu_hide,.menu_show{
             display: none;
         }
+        
     }
+    
     .lnb_curtain{
         display: none;
     }
 }
 
-@include desktop{
+@include desktop1440{
+
+}
+@include desktop1280{
     .lnb .depth1{width:1000px;}
     .lnb .depth1 .depth1_item{padding: 30px 56px 30px 0;}
+    .lnb .depth1 .depth1_item .depth1_text{font-size:17px;line-height:25px;}
 }
 @include tablet{
-    .lnb .depth1{width:94%}
+    header{height:70px;}
+    .logo{top:20px;left: calc(50% - 49px);}
+    .logo a{width:98px;}
+    .fixed header{transform:translateY(0);}
+    .menu.pulldown .depth1{height: auto;}
+    .lnb{right:-100%;width:100%;background-color:$White;transition: all 0.3s ease;z-index:10;}
+    .lnb .lnb_topbox{display:block;position:relative;margin-bottom:25px;padding:23px 0 22px;background-color:$BrandColorYellow;text-align: center;}
+    .lnb .lnb_topbox a{width:98px;}
+    .lnb .menu{position: relative;height: auto;}
+    .lnb .menu::before{display: none;}
+    .lnb .depth1{width:auto;height: auto;padding:0 14px;}
+    .lnb .depth1 .depth1_item{display:block;position:relative;margin-bottom:16px;padding:0;text-align: left;}
+    .lnb .depth1 .depth1_item a:before{display: flex;min-width: 45px;@include sprite_img(31px, 22px, '../images/main_sprite.png', -5px -80px);}
+    .lnb .depth1 .depth1_item:nth-child(1) a:before{@include sprite_img(31px, 22px, '../images/main_sprite.png', -5px -80px);}
+    .lnb .depth1 .depth1_item:nth-child(2) a:before{@include sprite_img(19px, 32px, '../images/main_sprite.png', -45px -78px);}
+    .lnb .depth1 .depth1_item:nth-child(3) a:before{@include sprite_img(25px, 26px, '../images/main_sprite.png', -76px -81px);}
+    .lnb .depth1 .depth1_item:nth-child(4) a:before{@include sprite_img(26px, 29px, '../images/main_sprite.png', -110px -83px);}
+    .lnb .depth1 .depth1_item:nth-child(5) a:before{@include sprite_img(25px, 24px, '../images/main_sprite.png', -153px -88px);}
+    .lnb .depth1 .depth1_item:last-child{margin-bottom:0;}
+    .lnb .depth1 .depth1_item .depth1_text{display: flex;padding:12px 5px;font-size:14px;line-height:22px;font-weight:700;}
+    .lnb_show .lnb{right:0}
+    .lnb .lnb_link{display:block;}
+    .lnb .menu_hide{display: block;position: absolute;top:14px;right:14px;width:35px;}
+    .lnb .menu_hide .menu_button{display:block; width:100%; height:35px; border:none; margin:0; padding:0;font-size:0;}
+    .lnb .menu_hide .menu_button:before{display:block; position:absolute; top:10px; left:10px;@include sprite_img(16px, 16px, '../images/main_sprite.png', -214px -90px); }
+    .gnb{display: none;}
 }
 @include mobile{
-    .gnb{display: none;}
+    
 }
 @include mobile640{
     
