--- a/스터디_2023/프로젝트/이마트24/css/_header.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_header.scss
@@ -15,6 +15,7 @@ header{
 }
 .fixed header{
     position: fixed;
+    left: 0;
     transform: translateY(-25px);
     &::before{
         backdrop-filter: blur(5px);
