--- a/스터디_2023/프로젝트/이마트24/css/_header.scss
+++ b/스터디_2023/프로젝트/이마트24/css/_header.scss
@@ -152,6 +152,7 @@ h1{font-size: 0;line-height: 0;}
     }
     .lnb_link{
         display: none;
+        position: relative;
         padding: 0 14px;
         ul{
             display:flex;
@@ -231,29 +232,39 @@ h1{font-size: 0;line-height: 0;}
     .lnb .depth1 .depth1_item .depth1_text{font-size:17px;line-height:25px;}
 }
 @include tablet{
-    header{height:70px;}
-    .logo{top:20px;left: calc(50% - 49px);}
+    header{height:62px;}
+    .logo{top:18px;left: calc(50% - 49px);}
     .logo a{width:98px;}
     .fixed header{transform:translateY(0);}
     .menu.pulldown .depth1{height: auto;}
-    .lnb{right:-100%;width:100%;background-color:$White;transition: all 0.3s ease;z-index:10;}
-    .lnb .lnb_topbox{display:block;position:relative;margin-bottom:25px;padding:23px 0 22px;background-color:$BrandColorYellow;text-align: center;}
+    .lnb{right:-100%;width:100%;height:100vh;background-color:$White;transition: all 0.3s ease;z-index:10;}
+    .lnb .lnb_topbox{display:block;position:relative;margin-bottom:25px;padding:19px 0 18px;background-color:$BrandColorYellow;text-align: center;}
     .lnb .lnb_topbox a{width:98px;}
-    .lnb .menu{position: relative;height: auto;}
+    .lnb .menu{overflow-y:auto;position: relative;height: calc(100% - 85px);}
     .lnb .menu::before{display: none;}
+    .lnb .menu:before {display:block;position:absolute;left:0;top:-25px;width: 100%;height: 100vh;background: #fff}
+    .lnb_open .lnb .menu::before{height: 100vh;}
     .lnb .depth1{width:auto;height: auto;padding:0 14px;}
+    
     .lnb .depth1 .depth1_item{display:block;position:relative;margin-bottom:16px;padding:0;text-align: left;}
-    .lnb .depth1 .depth1_item a:before{display: flex;min-width: 45px;@include sprite_img(31px, 22px, '../images/main_sprite.png', -5px -80px);}
-    .lnb .depth1 .depth1_item:nth-child(1) a:before{@include sprite_img(31px, 22px, '../images/main_sprite.png', -5px -80px);}
-    .lnb .depth1 .depth1_item:nth-child(2) a:before{@include sprite_img(19px, 32px, '../images/main_sprite.png', -45px -78px);}
-    .lnb .depth1 .depth1_item:nth-child(3) a:before{@include sprite_img(25px, 26px, '../images/main_sprite.png', -76px -81px);}
-    .lnb .depth1 .depth1_item:nth-child(4) a:before{@include sprite_img(26px, 29px, '../images/main_sprite.png', -110px -83px);}
-    .lnb .depth1 .depth1_item:nth-child(5) a:before{@include sprite_img(25px, 24px, '../images/main_sprite.png', -153px -88px);}
+    .lnb .depth1 .depth1_item .depth1_text{display: flex;align-items: center;padding:10px 5px;font-size:14px;line-height:22px;font-weight:700;text-decoration: none;}
+    .lnb .depth1 .depth1_item .depth1_text:before{display: flex;min-width:31px;margin-right:17px;@include sprite_img(31px, 22px, '../images/main_sprite.png', -5px -80px);}
+    .lnb .depth1 .depth1_item:nth-child(1) .depth1_text:before{@include sprite_img(31px, 22px, '../images/main_sprite.png', -5px -80px);}
+    .lnb .depth1 .depth1_item:nth-child(2) .depth1_text:before{@include sprite_img(19px, 32px, '../images/main_sprite.png', -40px -78px);}
+    .lnb .depth1 .depth1_item:nth-child(3) .depth1_text:before{@include sprite_img(25px, 26px, '../images/main_sprite.png', -73px -81px);}
+    .lnb .depth1 .depth1_item:nth-child(4) .depth1_text:before{@include sprite_img(26px, 29px, '../images/main_sprite.png', -108px -83px);}
+    .lnb .depth1 .depth1_item:nth-child(5) .depth1_text:before{@include sprite_img(25px, 24px, '../images/main_sprite.png', -148px -88px);}
+    .lnb .depth1 .depth1_item .depth1_text:after{display: block;position:absolute;right:5px;@include sprite_img(10px, 6px, '../images/main_sprite.png', -37px -43px);transition: all 0.2s ease;}
+    .lnb .depth1 .depth1_item.active .depth1_text:after{transform: rotate(180deg);}
     .lnb .depth1 .depth1_item:last-child{margin-bottom:0;}
-    .lnb .depth1 .depth1_item .depth1_text{display: flex;padding:12px 5px;font-size:14px;line-height:22px;font-weight:700;}
+    .lnb .depth1 .depth1_item .depth2{position: static;height: 0;background-color:#fff7e5;border: 1px solid #fff;border-radius:16px;opacity: 0;transition: all 0.2s ease;}
+    .lnb .depth1 .depth1_item.active .depth2{height:auto;margin-top:5px;border: 1px solid #ffedc3;opacity:1;}
+    .lnb .depth1 .depth1_item .depth2 .depth2_list{padding:14px 24px;}
+    .lnb .depth1 .depth1_item .depth2 .depth2_list .depth2_item{margin-top:15px;}
+    .lnb .depth1 .depth1_item .depth2 .depth2_list .depth2_item a{font-size:14px;line-height:22px;color:#333;font-weight:500;}
     .lnb_show .lnb{right:0}
     .lnb .lnb_link{display:block;}
-    .lnb .menu_hide{display: block;position: absolute;top:14px;right:14px;width:35px;}
+    .lnb .menu_hide{display: block;position: absolute;top:13px;right:9px;width:35px;}
     .lnb .menu_hide .menu_button{display:block; width:100%; height:35px; border:none; margin:0; padding:0;font-size:0;}
     .lnb .menu_hide .menu_button:before{display:block; position:absolute; top:10px; left:10px;@include sprite_img(16px, 16px, '../images/main_sprite.png', -214px -90px); }
     .gnb{display: none;}
